--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -249,8 +250,8 @@
     <string name="error_unexpected_long">Vyskytla se neočekávaná chyba. Pokud problém přetrvává, kontaktujte podporu pomocí možnosti „%1$s“ ve spodní části stránky nastavení.</string>
     <string name="error_unsupported_version_v">Nepodporovaná verze: %1$d</string>
     <string name="error_upgrade_not_supported">Upgrade z verzí starších než %1$s není podporován.</string>
-    <string name="option_fab_add_book_by_barcode_scan">Skenování čárového kódu</string>
-    <string name="option_fab_add_book_by_barcode_scan_batch">Skenování čárových kódů v dávce</string>
+    <string name="option_fab_add_book_by_barcode_scan">Naskenování čárového kódu</string>
+    <string name="option_fab_add_book_by_barcode_scan_batch">Dávkové skenování čárových kódů</string>
     <string name="option_fab_add_book_by_external_id">ID webové stránky</string>
     <string name="option_fab_add_book_by_internet_search">Prohledat internet</string>
     <string name="option_fab_add_book_by_isbn">Zadejte ISBN</string>
@@ -487,8 +488,7 @@
     <string name="title_backup_and_export">Zálohování a export</string>
     <string name="option_apply_to_this_node_only">Pouze tento uzel</string>
     <string name="option_apply_to_all_related_books">Všechny související knihy</string>
-    <string name="option_barcode_scan">Naskenujte čárový kód</string>
-    <string name="option_barcode_scan_continuous">Skenujte nepřetržitě</string>
+    <string name="option_barcode_scan_mode_continuous">Průběžné skenování</string>
     <string name="option_book_sync_list_with_details">Synchronizujte/umístěte seznam</string>
     <string name="option_cover_crop">Oříznout</string>
     <string name="option_cover_edit">Spusťte editor</string>
@@ -749,4 +749,5 @@
     <string name="lbl_original_title">Originální název</string>
     <string name="lbl_original_title_long">Původní název, pokud je tato kniha překladem</string>
     <string name="error_site_access_blocked">Přístup byl zablokován na webových stránkách.</string>
+    <string name="pt_scan_mode">Režim skenování</string>
 </resources>
