--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -235,8 +236,8 @@
     <string name="error_unexpected_long">Προέκυψε ένα μη αναμενόμενο σφάλμα. Εάν το πρόβλημα παραμένει, επικοινωνήστε με την υποστήριξη χρησιμοποιώντας την επιλογή «%1$s» στο κάτω μέρος της σελίδας ρυθμίσεων.</string>
     <string name="error_unsupported_version_v">Μη υποστηριζόμενη έκδοση: %1$d</string>
     <string name="error_upgrade_not_supported">Δεν υποστηρίζεται η αναβάθμιση από εκδόσεις παλαιότερες από %1$s.</string>
-    <string name="option_fab_add_book_by_barcode_scan">Σκανάρισμα Barcode</string>
-    <string name="option_fab_add_book_by_barcode_scan_batch">Σάρωση γραμμικών κωδίκων σε παρτίδα</string>
+    <string name="option_fab_add_book_by_barcode_scan">Σάρωση γραμμωτού κώδικα</string>
+    <string name="option_fab_add_book_by_barcode_scan_batch">Σάρωση γραμμωτών κωδικών σε παρτίδα</string>
     <string name="option_fab_add_book_by_external_id">Αναγνωριστικό βιβλίου ιστοτόπου</string>
     <string name="option_fab_add_book_by_internet_search">Αναζήτηση στο Internet</string>
     <string name="option_fab_add_book_by_isbn">Εισαγωγή κωδικού ISBN</string>
@@ -473,8 +474,7 @@
     <string name="title_backup_and_export">Δημιουργία αντιγράφων ασφαλείας και εξαγωγή</string>
     <string name="option_apply_to_this_node_only">Μόνο αυτός ο κόμβος</string>
     <string name="option_apply_to_all_related_books">Όλα τα σχετικά βιβλία</string>
-    <string name="option_barcode_scan">Σάρωση γραμμωτού κώδικα</string>
-    <string name="option_barcode_scan_continuous">Σάρωση συνεχώς</string>
+    <string name="option_barcode_scan_mode_continuous">Συνεχής σάρωση</string>
     <string name="option_book_sync_list_with_details">Συγχρονισμός/τοποθέτηση της λίστας</string>
     <string name="option_cover_crop">Περικοπή</string>
     <string name="option_cover_edit">Ξεκινήστε τον επεξεργαστή</string>
@@ -738,4 +738,5 @@
     <string name="lbl_original_title">Πρωτότυπος τίτλος</string>
     <string name="lbl_original_title_long">Πρωτότυπος τίτλος αν το βιβλίο είναι μετάφραση</string>
     <string name="error_site_access_blocked">Η πρόσβαση αποκλείστηκε από τον ιστότοπο.</string>
+    <string name="pt_scan_mode">Λειτουργία σάρωσης</string>
 </resources>
