--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -250,8 +251,8 @@
     <string name="error_unexpected_long">Произошла непредвиденная ошибка. Если проблема не исчезнет, обратитесь в службу поддержки, используя параметр «%1$s» внизу страницы настроек.</string>
     <string name="error_unsupported_version_v">Неподдерживаемая версия: %1$d</string>
     <string name="error_upgrade_not_supported">Обновление с версий старше %1$s не поддерживается.</string>
-    <string name="option_fab_add_book_by_barcode_scan">Сканировать штрих-код</string>
-    <string name="option_fab_add_book_by_barcode_scan_batch">Сканирование штрих-кодов в пакетном режиме</string>
+    <string name="option_fab_add_book_by_barcode_scan">Сканирование штрих-кода</string>
+    <string name="option_fab_add_book_by_barcode_scan_batch">Пакетное сканирование штрихкодов</string>
     <string name="option_fab_add_book_by_external_id">Идентификатор книги сайта</string>
     <string name="option_fab_add_book_by_internet_search">Поиск в Интернете</string>
     <string name="option_fab_add_book_by_isbn">Ввести ISBN</string>
@@ -488,8 +489,7 @@
     <string name="title_backup_and_export">Резервное копирование и экспорт</string>
     <string name="option_apply_to_this_node_only">Только этот узел</string>
     <string name="option_apply_to_all_related_books">Все связанные книги</string>
-    <string name="option_barcode_scan">Сканирование штрих-кода</string>
-    <string name="option_barcode_scan_continuous">Сканирование непрерывно</string>
+    <string name="option_barcode_scan_mode_continuous">Сканировать непрерывно</string>
     <string name="option_book_sync_list_with_details">Синхронизировать/позиционировать список</string>
     <string name="option_cover_crop">Обрезать эскиз</string>
     <string name="option_cover_edit">Запустить редактор</string>
@@ -750,4 +750,5 @@
     <string name="lbl_original_title">Оригинальное название</string>
     <string name="lbl_original_title_long">Оригинальное название, если эта книга является переводом</string>
     <string name="error_site_access_blocked">Доступ был заблокирован сайтом.</string>
+    <string name="pt_scan_mode">Режим сканирования</string>
 </resources>
