--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -240,7 +241,7 @@
     <string name="error_unexpected_long">Beklenmedik bir sorun oluştu. Sorun devam ederse, ayarlar sayfasının altındaki “%1$s” seçeneğini kullanarak desteğe başvurun.</string>
     <string name="error_unsupported_version_v">Desteklenmeyen sürüm: %1$d</string>
     <string name="error_upgrade_not_supported">%1$s’ten daha eski sürümlerden yükseltme desteklenmez.</string>
-    <string name="option_fab_add_book_by_barcode_scan">Barkod tara</string>
+    <string name="option_fab_add_book_by_barcode_scan">Barkod tarama</string>
     <string name="option_fab_add_book_by_barcode_scan_batch">Barkodları toplu olarak tarayın</string>
     <string name="option_fab_add_book_by_external_id">Web sitesi kitap kimliği</string>
     <string name="option_fab_add_book_by_internet_search">Genelağ’da ara</string>
@@ -478,8 +479,7 @@
     <string name="title_backup_and_export">Yedekleme ve Dışa Aktarma</string>
     <string name="option_apply_to_this_node_only">Bu düğüm sadece</string>
     <string name="option_apply_to_all_related_books">Ilgili tüm kitaplar</string>
-    <string name="option_barcode_scan">Barkod tara</string>
-    <string name="option_barcode_scan_continuous">Sürekli tara</string>
+    <string name="option_barcode_scan_mode_continuous">Sürekli tarama</string>
     <string name="option_book_sync_list_with_details">Listeyi senkronize edin/konumlandırın</string>
     <string name="option_cover_crop">Küçük resmi kırp</string>
     <string name="option_cover_edit">Düzenleyiciyi başlat</string>
@@ -744,4 +744,5 @@
     <string name="lbl_original_title">Orijinal başlık</string>
     <string name="lbl_original_title_long">Bu kitap bir çeviriyse orijinal adı</string>
     <string name="error_site_access_blocked">Web sitesi tarafından erişim engellendi.</string>
+    <string name="pt_scan_mode">Tarama modu</string>
 </resources>
