--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…“  - Regex to find wrong ones: ('|”|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -238,8 +240,8 @@
     <string name="option_fab_add_book_by_barcode_scan">Scannen eines Barcodes</string>
     <string name="option_fab_add_book_by_barcode_scan_batch">Barcodes im Stapel scannen</string>
     <string name="option_fab_add_book_by_external_id">Website-Buch-ID</string>
-    <string name="option_fab_add_book_by_internet_search">Internet durchsuchen</string>
-    <string name="option_fab_add_book_by_isbn">ISBN eingeben</string>
+    <string name="option_fab_add_book_by_internet_search">Suche nach Titel</string>
+    <string name="option_fab_add_book_by_isbn">Suche mit ISBN</string>
     <string name="option_fab_add_book_manually">Manuell hinzufügen</string>
     <string name="fallback_currency_format">%2$.2f %1$s</string>
     <string name="httpError">Ein Netzwerkfehler ist aufgetreten.</string>
