--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…“ - Regex to find wrong ones: ('|”|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -253,8 +255,8 @@
     <string name="option_fab_add_book_by_barcode_scan">Naskenování čárového kódu</string>
     <string name="option_fab_add_book_by_barcode_scan_batch">Dávkové skenování čárových kódů</string>
     <string name="option_fab_add_book_by_external_id">ID webové stránky</string>
-    <string name="option_fab_add_book_by_internet_search">Prohledat internet</string>
-    <string name="option_fab_add_book_by_isbn">Zadejte ISBN</string>
+    <string name="option_fab_add_book_by_internet_search">Vyhledávání podle názvu</string>
+    <string name="option_fab_add_book_by_isbn">Vyhledávání podle ISBN</string>
     <string name="option_fab_add_book_manually">Přidat ručně</string>
     <string name="fallback_currency_format">%2$.2f %1$s</string>
     <string name="httpError">Došlo k chybě sítě.</string>
