--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -252,8 +254,8 @@
     <string name="option_fab_add_book_by_barcode_scan">Escanear un código de barras</string>
     <string name="option_fab_add_book_by_barcode_scan_batch">Escanear códigos de barras por lotes</string>
     <string name="option_fab_add_book_by_external_id">Identificación del libro del sitio web</string>
-    <string name="option_fab_add_book_by_internet_search">Buscar en internet</string>
-    <string name="option_fab_add_book_by_isbn">Introducir ISBN</string>
+    <string name="option_fab_add_book_by_internet_search">Buscar por título</string>
+    <string name="option_fab_add_book_by_isbn">Buscar por ISBN</string>
     <string name="option_fab_add_book_manually">Añadir manualmente</string>
     <string name="fallback_currency_format">%2$.2f %1$s</string>
     <string name="httpError">Se ha producido un error de red.</string>
