--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources xmlns:tools="http://schemas.android.com/tools">
@@ -241,8 +243,8 @@
     <string name="option_fab_add_book_by_barcode_scan">Scansione di un codice a barre</string>
     <string name="option_fab_add_book_by_barcode_scan_batch">Scansione di codici a barre in batch</string>
     <string name="option_fab_add_book_by_external_id">ID libro del sito web</string>
-    <string name="option_fab_add_book_by_internet_search">Cerca in Internet</string>
-    <string name="option_fab_add_book_by_isbn">Inserisci codice ISBN</string>
+    <string name="option_fab_add_book_by_internet_search">Cerca per titolo</string>
+    <string name="option_fab_add_book_by_isbn">Cerca per ISBN</string>
     <string name="option_fab_add_book_manually">Aggiungi Manualmente</string>
     <string name="fallback_currency_format">%2$.2f %1$s</string>
     <string name="httpError">Si è verificato un errore di rete.</string>
