--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -499,8 +501,8 @@
     <string name="option_fab_add_book_by_barcode_scan">Scan een barcode</string>
     <string name="option_fab_add_book_by_barcode_scan_batch">Barcodes in batch scannen</string>
     <string name="option_fab_add_book_by_external_id">Website boek-id</string>
-    <string name="option_fab_add_book_by_internet_search">Internet doorzoeken</string>
-    <string name="option_fab_add_book_by_isbn">ISBN invoeren</string>
+    <string name="option_fab_add_book_by_internet_search">Zoeken op titel</string>
+    <string name="option_fab_add_book_by_isbn">Zoeken op ISBN</string>
     <string name="option_fab_add_book_manually">Handmatig toevoegen</string>
     <string name="option_field_usage_append">Voegt extra gegevens toe</string>
     <string name="option_field_usage_copy_if_blank">kopieer indien leeg</string>
