--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -658,9 +658,9 @@
     <!-- Booklist FAB menu option; Start the barcode scanner and scan a batch of barcodes/books. -->
     <string name="option_fab_add_book_by_barcode_scan_batch">Scan Barcodes in batch</string>
     <!-- Booklist FAB menu option -->
-    <string name="option_fab_add_book_by_isbn">Enter ISBN</string>
+    <string name="option_fab_add_book_by_isbn">Search by ISBN</string>
     <!-- Booklist FAB menu option -->
-    <string name="option_fab_add_book_by_internet_search">Search Internet</string>
+    <string name="option_fab_add_book_by_internet_search">Search by title</string>
     <!-- Booklist FAB menu option -->
     <string name="option_fab_add_book_manually">Add Manually</string>
     <!-- Booklist FAB menu option / screen title -->
