--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -476,6 +476,7 @@
     <string name="title_backup_and_export">Δημιουργία αντιγράφων ασφαλείας και εξαγωγή</string>
     <string name="option_apply_to_this_node_only">Μόνο αυτός ο κόμβος</string>
     <string name="option_apply_to_all_related_books">Όλα τα σχετικά βιβλία</string>
+    <string name="option_barcode_scan_mode_manual">Χειροκίνητα</string>
     <string name="option_barcode_scan_mode_continuous">Συνεχής σάρωση</string>
     <string name="option_book_sync_list_with_details">Συγχρονισμός/τοποθέτηση της λίστας</string>
     <string name="option_cover_crop">Περικοπή</string>
