--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -479,6 +479,7 @@
     <string name="title_backup_and_export">Sauvegarde et exportation</string>
     <string name="option_apply_to_this_node_only">Ce nœud uniquement</string>
     <string name="option_apply_to_all_related_books">Tous les livres liés</string>
+    <string name="option_barcode_scan_mode_manual">Manuellement</string>
     <string name="option_barcode_scan_mode_continuous">Numériser en continu</string>
     <string name="option_book_sync_list_with_details">Synchroniser/positionner la liste</string>
     <string name="option_cover_crop">Recadrer</string>
