--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -481,6 +481,7 @@
     <string name="title_backup_and_export">Yedekleme ve Dışa Aktarma</string>
     <string name="option_apply_to_this_node_only">Bu düğüm sadece</string>
     <string name="option_apply_to_all_related_books">Ilgili tüm kitaplar</string>
+    <string name="option_barcode_scan_mode_manual">Manuel olarak</string>
     <string name="option_barcode_scan_mode_continuous">Sürekli tarama</string>
     <string name="option_book_sync_list_with_details">Listeyi senkronize edin/konumlandırın</string>
     <string name="option_cover_crop">Küçük resmi kırp</string>
